# FoxML_Core_Latest

./: .gitignore  CHANGELOG.md  LICENSE  LICENSE-COMMERCIAL  NOTICE  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.claude/plans/: dash-fixes-r3-cleanup.md  dashboard-bug-fixes-master.md  dashboard-phase1-bridge-fixes.md  dashboard-phase2-panic-prevention.md  dashboard-phase3-defensive-coding.md
CONFIG/: __init__.py
CONFIG/experiments/: _template_raw_ohlcv.yaml  raw_ohlcv_4gb.yaml
CONFIG/pipeline/: gpu.yaml
DASHBOARD/bridge/: alpaca_stream.py  server.py
DASHBOARD/dashboard/: Cargo.toml
DASHBOARD/dashboard/src/: main.rs
DASHBOARD/dashboard/src/api/: client.rs  events.rs
DASHBOARD/dashboard/src/launcher/: service_manager.rs
DASHBOARD/dashboard/src/ui/: notification.rs
DASHBOARD/dashboard/src/views/: model_selector.rs  training.rs
DASHBOARD/dashboard/src/widgets/: event_log.rs  risk_gauge.rs
DATA_PROCESSING/: __init__.py
LIVE_TRADING/brokers/: paper.py
LIVE_TRADING/engine/: trading_engine.py
LIVE_TRADING/models/: inference.py  loader.py
LIVE_TRADING/prediction/: cs_ranking_predictor.py  predictor.py
LIVE_TRADING/sizing/: vol_scaling.py
TRAINING/common/: determinism.py  input_mode.py
TRAINING/common/utils/: performance_audit.py
TRAINING/data/: __init__.py
TRAINING/model_fun/: base_trainer.py  cnn1d_trainer.py  lstm_trainer.py  transformer_trainer.py
TRAINING/orchestration/: intelligent_trainer.py
TRAINING/orchestration/intelligent_trainer/: pipeline_stages.py
TRAINING/ranking/: shared_ranking_harness.py
TRAINING/ranking/predictability/: leakage_detection.py
TRAINING/ranking/predictability/model_evaluation/: training.py
TRAINING/training_strategies/: utils.py
TRAINING/training_strategies/execution/: data_preparation.py  training.py
