[package]
name = "foxml-dashboard"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["Jennifer Lewis / Fox ML Infrastructure LLC"]

[[bin]]
name = "foxml-dashboard"
path = "src/main.rs"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.28"

# Animations
tachyonfx = "0.7"

# Desktop Notifications
notify-rust = "4"

# Fuzzy Search (for command palette)
fuzzy-matcher = "0.3"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket & HTTP
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json", "stream"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# File Watching
notify = "6.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Text Editor (rope data structure)
ropey = "1.6"

# System Info
sysinfo = "0.30"

# Regex
regex = "1.10"

# Directory Paths
dirs = "5.0"

# Systemd Integration
zbus = "4.0"

# File operations
walkdir = "2.4"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async Utilities
futures = "0.3"

[features]
default = ["desktop-notifications"]
desktop-notifications = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
